--- a/ECLIPSE.html
+++ b/ECLIPSE.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>БЕЛУГА - Аренда яхт</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -121,8 +123,8 @@
 /* Характеристики яхты (размер, вместимость и т.д.) */
 .yacht-specs {
     display: flex;
-    gap: 15px;
-    justify-content: flex-end; /* Оставил сдвиг вправо */
+    gap: 10px; /* Меньше расстояние */
+    justify-content: flex-start; /* Если не нужен сдвиг вправо */
 }
 
 /* Адаптация под мобильные устройства */
@@ -157,13 +159,13 @@
     background: linear-gradient(-45deg, #b8860b, #d4af37, #e8c86d, #b8860b);
     background-size: 300% 300%;
     color: white;
-    padding: 8px 18px; /* Чуть больше */
-    border-radius: 15px;
-    font-size: 16px;
+    padding: 4px 10px; /* Сделал компактнее */
+    border-radius: 10px; /* Чуть меньше закругление */
+    font-size: 14px; /* Сделал текст меньше */
     font-weight: bold;
     text-transform: uppercase;
     transition: 0.5s ease-in-out;
-    animation: waterFlow 4s infinite linear; /* Длинный цикл для плавности */
+    animation: waterFlow 4s infinite linear;
 }
 
 @keyframes waterFlow {
@@ -591,6 +593,18 @@
         height: 50px;
     }
 }
+
+
+.rental-info {
+    margin-bottom: 20px;
+    padding-bottom: 20px; /* Увеличивает расстояние между блоком и кнопкой */
+}
+
+.container { 
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Регулирует расстояние между элементами */
+}
     </style>
 
     <nav class="navbar">
@@ -684,16 +698,6 @@
 
             <div class="rental-info">
                 <p>Минимальное время аренды: <strong>1 час</strong></p>
-                <!-- <div class="price-section">
-                    <div class="price-box price-weekday">
-                        <span>ПН-ЧТ</span>
-                        <span class="price-inner">ОТ <strong>18 000</strong> ₽/ЧАС</span>
-                    </div>
-                    <div class="price-box price-weekend">
-                        <span>ПТ-ВС</span>
-                        <span class="price-inner">ОТ <strong>21 000</strong> ₽/ЧАС</span>
-                    </div>
-                </div> -->
             </div>
 
             <button class="cta-button" id="rent-button">Арендовать</button>
